<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustermerPart.MainActivity3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_marginLeft="166dp"
            android:background="@drawable/bg_back">


        </RelativeLayout>

        <ImageView
            android:id="@+id/shoe_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/l_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"

            android:layout_marginTop="63dp"
            android:text="@string/shoe_brand3"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="40dp"
            android:text="@string/shoe_three"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="285dp"
            android:text="@string/coin"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="270dp"
            android:text="44"
            android:textColor="@color/black"
            android:textSize="46sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"

                app:srcCompat="@drawable/background" />


        </RelativeLayout>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="3dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40sp"
            android:text="@string/Des_one"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:textStyle="normal" />


        <ImageView
            android:id="@+id/minusbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@drawable/minus" />


        <TextView
            android:id="@+id/numberOrderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="202dp"
            android:layout_marginTop="130dp"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/plusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="229dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@drawable/plus" />

            <Button
            android:id="@+id/btn_orderbtn"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="170dp"
            android:backgroundTint="@color/red"
            android:text="@string/btn_oder"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp" />


        </RelativeLayout>







</LinearLayout>